--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="index.html" id="navbar__logo">WEngineers</a>
+            <a href="index.php" id="navbar__logo">WEngineers</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
