--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="index.html" class="navbar__links">Home</a>
+                    <a href="index.php" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="login.php" class="navbar__links">LogIn</a>
@@ -88,7 +88,7 @@
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="index.html" id="footer__logo"><i class="fas fa-gem"></i>WEngineers</a>
+                    <a href="index.php" id="footer__logo"><i class="fas fa-gem"></i>WEngineers</a>
                 </div>
                 <p class="website__right">&copy; WEngineers. 2025. All Rights Reserved.</p>
                 <div class="social__icons">
